# stonepen

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SKILLS.md
crates/stonepen-core/: Cargo.toml
crates/stonepen-core/src/: bbox.rs  brush.rs  clipboard.rs  color.rs  doc.rs  export_json.rs  export_svg.rs  geom.rs  hit.rs  ids.rs  item.rs  layer.rs  lib.rs  ops.rs  point.rs  resample.rs  runtime.rs  sel.rs  session.rs  shortcuts.rs  smooth.rs  spatial.rs  stroke.rs  viewport.rs  xform.rs
crates/stonepen-wasm/: Cargo.toml
crates/stonepen-wasm/src/: app.rs  canvas.rs  file_io.rs  keyboard.rs  lib.rs  pointer.rs  render_2d.rs  web_runtime.rs  web_ui.rs
scripts/: build-web.sh
web/: index.html  main.js  styles.css
