[package]
name = "stonepen-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
stonepen-core = { path = "../stonepen-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
  "Blob",
  "BlobPropertyBag",
  "CanvasRenderingContext2d",
  "console",
  "CssStyleDeclaration",
  "Document",
  "DomRect",
  "Element",
  "EventTarget",
  "File",
  "FileReader",
  "HtmlAnchorElement",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlImageElement",
  "HtmlInputElement",
  "KeyboardEvent",
  "MouseEvent",
  "PointerEvent",
  "TouchEvent",
  "Url",
  "WheelEvent",
  "Window",
]
