[package]
name = "stonepen-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
stonepen-core = { path = "../stonepen-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "AddEventListenerOptions",
  "Blob",
  "BlobPropertyBag",
  "CanvasRenderingContext2d",
  "ClipboardEvent",
  "console",
  "CssStyleDeclaration",
  "CustomEvent",
  "CustomEventInit",
  "DataTransfer",
  "DataTransferItem",
  "DataTransferItemList",
  "Document",
  "DomRect",
  "DomTokenList",
  "Element",
  "EventTarget",
  "File",
  "FileList",
  "FileReader",
  "HtmlAnchorElement",
  "HtmlButtonElement",
  "HtmlCanvasElement",
  "HtmlDocument",
  "HtmlElement",
  "HtmlImageElement",
  "HtmlInputElement",
  "KeyboardEvent",
  "MouseEvent",
  "Navigator",
  "PointerEvent",
  "ProgressEvent",
  "ResizeObserver",
  "ResizeObserverEntry",
  "Storage",
  "TouchEvent",
  "Url",
  "WheelEvent",
  "Window",
]
